# rust-genshin-impact-updater

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs  parser.rs  util.rs
